[project]
name = "icarus"
version = "0.1.0"
description = "ICARUS: Interactive Configuration Analysis and Repair of Unoptimized Schema"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy==2.2.1",
    "pyarrow<=20.0.0", # pin version for compatible numpy
    "strands-agents[litellm]>=1.8.0",
    "strands-agents-tools>=0.2.7",
    "docker>=7.1.0",
    "streamlit>=1.49.1",
    "tiktoken==0.8.0", # pin version for compatible litellm
    "networkx>=3.5",
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.12,<0.9.0"]
